# anti-brainrot

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  db.py  event.py  event_test.py  linktree_scraper.py  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  scraper.py  seed.py  test_linktree.py  test_weeztix.py  weeztix_scraper.py
bot/: notifier.py
docs/: architecture.md
scraper/: linktree_scraper.py  scraper.py  weeztix_scraper.py
scraper/scraper/: items.py  pipelines.py  settings.py
scraper/scraper/spiders/: linktree.py  weeztix.py
tests/: genre_filter_test.py  test_linktree.py  test_weeztix.py
